@@ -5,6 +5,7 @@ Version 3.0.4
     - Feature: Adding links to the new Lengow help center
     - Bugfix: [export] Data recovery for custom fields
     - Bugfix: [import] Send email enabled for the report email
+    - Bugfix: [import] Array to string conversion for order comments
 
 =============================================================
 Version 3.0.3
